--- a/style.css
+++ b/style.css
@@ -68,14 +68,6 @@ nav li a:hover {
     color: white;
 }
 
-.hero-text {
-    width: 50%;
-}
-
-.hero-img {
-    width: 50%;
-
-}
 
 .hero-img img {
     width: 100%;
@@ -104,6 +96,7 @@ nav li a:hover {
     line-height: 25px;
     font-weight: 500;
     margin: 20px 0;
+    padding: 0 10px;
 }
 
 .hero-text button {
@@ -141,9 +134,9 @@ nav li a:hover {
 }
 
 .categories-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 1rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem; 
     width: 100%;
 }
 
@@ -215,7 +208,8 @@ a {
 .zx {
     background-color: #D87D4A;
     width: 100%;
-    height: 100vh;
+    height: auto;
+    padding: 20px 0;
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
@@ -242,7 +236,7 @@ a {
     line-height: 25px;
     font-weight: 500;
     color: rgba(250, 250, 250, 0.5);
-    padding-right: 90px;
+    /* padding-right: 90px; */
 }
 
 .zx-text button {
@@ -264,8 +258,8 @@ a {
 }
 
 .zx-img img {
-    width: 50%;
-    height: 70vh;
+    width: 60%;
+    height: 80vh;
     padding-left: 90px;
 }
 
@@ -305,7 +299,7 @@ a {
 
 .earphones div {
     background: #e7dfdf;
-    padding: 70px 120px;
+    padding: 80px 120px;
     border-radius: 10px;
 }
 
@@ -419,4 +413,125 @@ nav li a:hover {
 .social i {
     padding: 0 10px;
     font-size: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 600px)  {
+    header{
+        padding: 20px 10px;
+   }
+   header nav{
+       display: none;
+   }
+   #hero-section {
+   padding: 13% 0 ;
+   text-align: center;
+   flex-direction: column;
+}
+
+.main-container-wrapper{
+   flex-direction: column;
+}
+.categories-section{
+   flex-direction: column;
+}
+.zx{
+   flex-direction: column;
+   text-align: center;
+}
+.zx-img {
+   width: 100%;
+   margin: 0 auto;
+}
+
+.zx-text {
+   width: 100%;
+}
+
+.zx-img img {
+   width: 50%;
+   height: 50vh;
+
+}
+.zx-text h1 {
+   font-size: 36px;
+   padding-right: 0px;
+}
+
+.zx-text p {
+   padding-right: 25px;
+}
+
+.home-product h1 {
+   margin-top: 40%;
+}
+
+.earphones {
+  flex-direction: column;
+}
+
+.earphones img {
+   margin-bottom: 20px;
+   width: 100%;
+}
+
+.earphones div {
+   padding: 60px 120px;
+}
+
+.earphones button {
+   margin-left: 0px;
+}
+.man {
+  flex-direction: column;
+}
+
+.text-man {
+   width: 100%;
+}
+
+
+.text-man p {
+   padding: 15px 0;
+}
+
+.man img {
+   width: 100%;
+}
+
+#footer .footer {
+  flex-direction: column;
+}
+.footer nav{
+   padding: 20px 0;
+}
+.footer nav li a {
+   font-size: 13px;
+}
+
+.copy {
+flex-direction: column;
+}
+
+.text-copy {
+   width: 100%;
+}
+
+.text-copy p {
+   font-size: 15px;
+   text-align: center;
+   padding: 10px 40px;
+}
+
 }
